Upgrade the build to java 1.7 and add some enhancements from other builds.