@@ -1,23 +1,23 @@
 configure(allprojects) {
     apply plugin: 'idea'
-    apply plugin: 'maven'
-    apply plugin: 'signing'
 
     version = '1.0-SNAPSHOT'
     group = "net.davidbuccola.${rootProject.name}"
 
+    // Symbolic versions for select dependencies. The version of most dependencies is specified inline with the
+    // dependency declaration. However, for certain artifact groups that have multiple artifacts or that show up often
+    // the version is specified symbolically here to simplify maintenance.
+
     ext {
-        // Symbolic versions for selected dependencies.
-        gradleVersion = '1.5'
+        gradleVersion = '1.6'
+        hamcrestVersion = '1.3'
         jacksonVersion = '2.1.4'
         jerseyVersion = '1.12'
-        slf4jVersion = '1.6.6'
+        junitVersion = '4.11'
+        logbackVersion = '1.0.13'
+        slf4jVersion = '1.7.5'
         spaVersion = '1.0-SNAPSHOT'
         springVersion = '3.1.3.RELEASE'
-
-        // Support for 'provided' dependencies in generated poms
-        providedDependencies = []
-        provided = { providedDependencies << it }
     }
 
     repositories {
@@ -43,11 +43,11 @@ configure(rootProject) {
 
                     def checkstyleSettings = getFreshIprComponent(provider.node, 'CheckStyle-IDEA')
                     def mapNode = checkstyleSettings.appendNode('option', [name: 'configuration']).appendNode('map')
-                    mapNode.appendNode('entry', [key: 'active-configuration', value: 'LOCAL_FILE:$PROJECT_DIR$/config/checkstyle/checkstyle.xml:'])
+                    mapNode.appendNode('entry', [key: 'active-configuration', value: 'LOCAL_FILE:$PROJECT_DIR$/config/src/main/resources/checkstyle.xml:'])
                     mapNode.appendNode('entry', [key: 'check-nonjava-files', value: 'false'])
                     mapNode.appendNode('entry', [key: 'check-test-classes', value: 'false'])
                     mapNode.appendNode('entry', [key: 'location-0', value: 'CLASSPATH:/sun_checks.xml:The default CheckStyle rules'])
-                    mapNode.appendNode('entry', [key: 'location-1', value: 'LOCAL_FILE:$PROJECT_DIR$/config/checkstyle/checkstyle.xml:'])
+                    mapNode.appendNode('entry', [key: 'location-1', value: 'LOCAL_FILE:$PROJECT_DIR$/config/src/main/resources/checkstyle.xml:'])
                     mapNode.appendNode('entry', [key: 'suppress-errors', value: 'false'])
                     mapNode.appendNode('entry', [key: 'thirdparty-classpath', value: ''])
                 }
@@ -56,17 +56,19 @@ configure(rootProject) {
     }
 }
 
-configure(subprojects) {
+configure(subprojects - project(":config")) {
     apply plugin: 'java'
     apply plugin: 'osgi'
+    apply plugin: 'maven'
     apply plugin: 'eclipse'
+    apply plugin: 'signing'
     apply plugin: 'findbugs'
     apply plugin: 'checkstyle'
 
     ext.gitHash = rootProject.gitHash  // So we don't execute git command multiple times
 
-    sourceCompatibility = 1.6
-    targetCompatibility = 1.6
+    sourceCompatibility = 1.7
+    targetCompatibility = 1.7
 
     idea {
         module {
@@ -94,7 +96,6 @@ configure(subprojects) {
     tasks.withType(Compile) {
         options.debug = true
         options.encoding = 'UTF-8'
-        options.compilerArgs = ['-Xlint:-options'] // Ignore warning about bootclasspath and source compatibility (for now)
     }
 
     tasks.withType(Jar) {
@@ -103,15 +104,20 @@ configure(subprojects) {
         }
     }
 
+    tasks.withType(Test) {
+        maxParallelForks = Runtime.runtime.availableProcessors() / 2
+        jvmArgs '-Xmx512m', '-XX:MaxPermSize=128m'
+    }
+
     checkstyle {
         sourceSets = [sourceSets.main]
-        configFile = file("$rootProject.projectDir/config/checkstyle/checkstyle.xml")
+        configFile = file("${project(':config').projectDir}/src/main/resources/checkstyle.xml")
         toolVersion = 5.6
     }
 
     findbugs {
         sourceSets = [sourceSets.main]
-        excludeFilter = file("$rootProject.projectDir/config/findbugs/excludeFilter.xml")
+        excludeFilter = file("${project(':config').projectDir}/src/main/resources/findbugs-exclude.xml")
     }
 
     signing {
